<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="hero"
            type="com.example.superherosquadmaker.data.localdb.Hero"/>
        <variable name="localComic1"
            type="com.example.superherosquadmaker.data.localdb.ComicLocal"/>
        <variable name="localComic2"
            type="com.example.superherosquadmaker.data.localdb.ComicLocal"/>
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.heroDetails.HeroDetails">
        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/framelayout"
            android:layout_height="350dp"
            android:contentDescription="@string/superhero_image_desc"
            app:layout_constraintBottom_toTopOf="@+id/superHeroname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:srcCompat="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">
            <ImageView
                android:id="@+id/heroImgDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:loadFromPicasso="@{hero.thumbnail}"
                android:contentDescription="@string/super_hero_image_description"
                app:srcCompat="@mipmap/ic_launcher" />
            <ImageView
                android:id="@+id/goBackToList"
                android:contentDescription="@string/go_back_img_content_description"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/clear_foreground" />
        </FrameLayout>



        <TextView
            android:id="@+id/superHeroname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@{hero.name}"
            tools:text="Display name (name)"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/framelayout" />

        <Button
            android:id="@+id/addRemoveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:buttonSwap="@{hero.isInMySquad}"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/superHeroname"
            app:layout_constraintVertical_bias="0.04" />



        <TextView
            android:id="@+id/superHeroDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:nullOrEmptyDescription="@{hero.description}"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addRemoveButton"
            tools:text="description of the super hero and his bio etc" />

        <TextView
            android:id="@+id/lastAppearedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="8dp"
            android:text="@string/last_appeared_in"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/superHeroDescription" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:rippleColor="#AA7D7D" />

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/relativeLayout"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastAppearedIn">


            <ImageView
                android:id="@+id/comic1"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_marginEnd="32dp"
                app:loadFromPicasso="@{localComic1.thumbnail}"
                android:contentDescription="@string/super_hero_image_description"
                app:srcCompat="@mipmap/ic_launcher"
                tools:layout_editor_absoluteX="255dp"
                tools:layout_editor_absoluteY="638dp" />

            <TextView
                android:id="@+id/comic1Title"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comic1"
                android:layout_marginTop="8dp"
                android:text="@{localComic1.title}"
                android:layout_marginEnd="32dp"
                android:maxLines="2"
                android:textSize="14sp"
                tools:text="fakeTitle" />

            <ImageView
                android:id="@+id/comic2"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_toEndOf="@id/comic1"
                app:loadFromPicasso="@{localComic2.thumbnail}"
                android:contentDescription="@string/super_hero_image_description"
                app:srcCompat="@mipmap/ic_launcher"
                tools:layout_editor_absoluteX="255dp"
                tools:layout_editor_absoluteY="638dp" />

            <TextView
                android:id="@+id/comic2Title"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comic1"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/comic1Title"
                android:maxLines="2"
                android:textSize="14sp"
                android:text="@{localComic2.title}"
                tools:text="fakeTitle" />


        </RelativeLayout>

        <TextView
            android:id="@+id/andMore"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintVertical_bias="0.225"
            tools:text="fakeTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</layout>